force-app/main/default/objects/Workflow_Console_ViewDetail__c/Workflow_Console_ViewDetail__c.object-meta.xml
<CustomObject>
    <description>Object to hold  Views from Workflow Console</description>
    <label>Workflow_Console_ViewDetail</label>
    <nameField>
        <label>Workflow_View_Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workflow_Console_ViewDetail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>