force-app/main/default/objects/Workflow_Console_ViewDetail__c/fields/Available_Columns__c.field-meta.xml
<CustomField>
    <fullName>Available_Columns__c</fullName>
    <label>Available Columns</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>