force-app/main/default/objects/Workflow_Console_ViewDetail__c/fields/Dynamic_Search_Restore_Text__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_Search_Restore_Text__c</fullName>
    <label>Dynamic Search Restore Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>