force-app/main/default/objects/Workflow_Console_ViewDetail__c/fields/Selected_Columns__c.field-meta.xml
<CustomField>
    <fullName>Selected_Columns__c</fullName>
    <label>Selected Columns</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>