force-app/main/default/objects/Workflow_Console_ViewDetail__c/fields/Selected_View__c.field-meta.xml
<CustomField>
    <fullName>Selected_View__c</fullName>
    <label>Selected View</label>
    <type>TextArea</type>
</CustomField>