force-app/main/default/objects/Workflow_Console_ViewDetail__c/fields/View_Owner__c.field-meta.xml
<CustomField>
    <fullName>View_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>View Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Workflow_Console_ViewDetail</relationshipName>
    <type>Lookup</type>
</CustomField>