force-app/main/default/objects/Workflow_Console_ViewDetail__c/fields/View_Type__c.field-meta.xml
<CustomField>
    <fullName>View_Type__c</fullName>
    <label>View Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dashboard</fullName>
            </value>
            <value>
                <fullName>Account Console</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>